added swagger docs for rest of todo post and fixed update todo
